--- a/src/components/styles/herobanner.scss
+++ b/src/components/styles/herobanner.scss
@@ -4,6 +4,7 @@
   // background: url('../../assets/banner.jpg');
   background-size: cover;
   background-repeat: no-repeat;
+  font-family: fantasy;
   
   .herobanner-container{
     display: flex;
