Updated why we are unique

--- a/src/components/styles/WhyWeAreUnique.scss
+++ b/src/components/styles/WhyWeAreUnique.scss
@@ -55,13 +55,14 @@
   }
 
   .details-wrapper > span{
-    font-weight: lighter;
+    font-weight: 300;
     letter-spacing: 0.05em;
     color: #fff;
     width: 85%;
     font-size: 1.1rem;
-    opacity: 0.8;
+    // opacity: 0.3;
   }
+
 
   .fa{
     color: lightseagreen;
@@ -80,7 +81,7 @@
   }
 
   .icon-3{
-    color: #c119ce
+    color: #c119ce;
   }
 
 
