--- a/src/app/styles/styles.module.scss
+++ b/src/app/styles/styles.module.scss
@@ -5,9 +5,10 @@
     height: 100vh;
     width: 100vw;
     position: fixed;
-    object-fit: cover;
+    object-fit: scale-down;
     left: 0;
-    top: 0;
+    top: -15vh;
     z-index: -1;
   }
+
 }
