Reverted to React app

--- a/src/components/styles/WhyWeAreUnique.scss
+++ b/src/components/styles/WhyWeAreUnique.scss
@@ -8,7 +8,6 @@
     text-align: center;
     width: 100%;
     font-weight: 600;
-    
     // opacity: 0.8;
   }
 
@@ -55,14 +54,13 @@
   }
 
   .details-wrapper > span{
-    font-weight: 300;
+    font-weight: lighter;
     letter-spacing: 0.05em;
     color: #fff;
     width: 85%;
     font-size: 1.1rem;
-    // opacity: 0.3;
+    opacity: 0.8;
   }
-
 
   .fa{
     color: lightseagreen;
@@ -81,7 +79,7 @@
   }
 
   .icon-3{
-    color: #c119ce;
+    color: #c119ce
   }
 
 
