--- a/src/pages/styles/register.scss
+++ b/src/pages/styles/register.scss
@@ -12,7 +12,7 @@
   background-repeat: no-repeat;
 
   .register-wrapper{
-    width: 600px;
+    width: 700px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -42,14 +42,15 @@
     margin: 20px 0;
   }
 
-  input{
+  input, select{
     outline: none;
     border-radius: 3px;
-    height: 60px;
+    height: 50px;
     border: 1px solid rgb(227, 231, 232);
     border-radius: 5px;
     padding: 10px;
     color: #000000;
+    width: 100%;
   }
 
   .submit-btn{
@@ -76,6 +77,10 @@
     text-align: center;
   }
 
+  input::placeholder{
+    display: none;
+  }
+
   @media screen and (max-width: 768px){
     width: 100%;
 
@@ -83,10 +88,10 @@
       width: 95%;
     }
 
-  form{
-    padding: 20px 15px !important;
-    box-shadow: 1px 1px 9px 1px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
+    form{
+      padding: 20px 15px !important;
+      box-shadow: 1px 1px 9px 1px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
   }
 
 }
