--- a/src/components/styles/categories.scss
+++ b/src/components/styles/categories.scss
@@ -56,9 +56,9 @@
 
   // .icon{ width: 50px; height: 50px; font-size: 2rem; }
   .icon{ font-size: 2.5rem; }
-  .all{ background-color: lightcoral ; }
-  .mobile{ background-color: lightseagreen ; }
-  .computer { background:#ff9e29; }
+  .all{ background-color: lightcoral; }
+  .phone{ background-color: lightseagreen; }
+  .laptop { background:#ff9e29; }
   .car { background:lightsteelblue; }
   .bike { background:#15c01c; }
   .furniture { background:#7e3b07; }
