--- a/src/components/styles/categories.scss
+++ b/src/components/styles/categories.scss
@@ -15,12 +15,13 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-gap: 20px;
-
   }
-
+  
   .category-container{
+
     grid-column: span 4;
     min-height: 150px;
+
 
     &:hover{
       background-color: #01a185;
@@ -41,7 +42,7 @@
     flex-direction: column;
     text-decoration: none;
     height: 100%;
-    padding: 10px 0;
+    padding: 30px 0 20px 0;
   }
 
   .icon-container{
