--- a/src/pages/styles/product-preview.scss
+++ b/src/pages/styles/product-preview.scss
@@ -160,8 +160,8 @@
   }
 
   .price-box-container{
-    margin: 2px auto 0 auto;
-    height: 250px;
+    margin: 2px auto 30px auto;
+    // height: 250px;
   }
 
   .clip{
@@ -174,6 +174,43 @@
   .price-box{
     padding: 10px;
     box-shadow: 0px 0px 20px 1px #65d4c1;
+  }
+
+  .fee-wrapper{
+    .subtotal{
+      display: flex;
+      align-items: center;
+      font-size: 18px;
+
+
+      & > span{
+        width: 100%;;
+        // color: yellow;
+        margin-right: 4px;;
+      }
+      
+      & > input{
+        width: 100%;;
+        outline: none;
+        margin-left: 4px;
+        // border: none;;
+      }
+    }
+    .checkout-btn-wrapper{
+      margin-top: 10px;
+
+      button{
+        background-color: #026655;
+        outline: none;
+        border: none;
+        width: 100%;
+        padding: 4px;
+        border-radius: 2px;
+        color: #ffffff;
+        font-weight: 900;
+        font-size: 18px;;
+      }
+    }
   }
 
   .box-row{
