--- a/src/pages/styles/post-ad.scss
+++ b/src/pages/styles/post-ad.scss
@@ -69,6 +69,9 @@
     letter-spacing: 0.25px;
     font-weight: 500;
   }
+  select, option, ::placeholder{
+    font-size: 13px;
+  }
 
   .input,
   select,
@@ -85,6 +88,7 @@
   textarea {
     height: 95px !important;
     resize: none;
+    font-size: 14px;
   }
 
   .photos-container {
