--- a/src/pages/styles/product.scss
+++ b/src/pages/styles/product.scss
@@ -134,6 +134,8 @@
     color: #01a185;
     font-family: "Cabin", sans-serif;
     text-align: end;
+    font-size: 16px;
+    
   }
 
   .list-view-product-date-wrapper {
