adjust navbar position

--- a/src/components/styles/herobanner.scss
+++ b/src/components/styles/herobanner.scss
@@ -4,6 +4,8 @@
   // background: url('../../assets/banner.jpg');
   background-size: cover;
   background-repeat: no-repeat;
+  position: relative;
+  top: 10vh;
   
   .herobanner-container{
     display: flex;
