--- a/src/components/styles/navbar.scss
+++ b/src/components/styles/navbar.scss
@@ -1,6 +1,8 @@
 #navbar{
-  height: 8vh;
+  height: 10vh;
   width: 100%;
+  position: fixed;
+  z-index: 100;
   
   .navbar-wrapper{
     display: flex;
