--- a/src/pages/styles/profile.scss
+++ b/src/pages/styles/profile.scss
@@ -5,6 +5,8 @@
   padding: 10px 0;
   font-family: 'Roboto', sans-serif;
   background-color: #fff;
+  position: relative;
+  top: 10vh;
 
 
   #settings{
