--- a/src/pages/styles/profile.scss
+++ b/src/pages/styles/profile.scss
@@ -1,129 +1,31 @@
 #profile{
-  
   width: 100%;
-  min-height: calc(82vh - 10vh);
-  padding: 10px 0;
+  position: relative;
+  height: 100%;
+  min-height: calc(100vh - 25vh);
   font-family: 'Roboto', sans-serif;
   background-color: #fff;
-  position: relative;
   top: 10vh;
-
-
-  #settings{
-
-    .settings-container{
-      width: 400px;
-      display: block;
-      margin: 20px auto;
-    }
-
-    .display-picture-wrapper{
-      width: 150px;
-      height: 150px;
-      margin: 0 auto;
-    }
-
-    .display-picture-wrapper > label{
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      margin: 0 auto;
-      cursor: pointer;
-    }
-
-    .display-picture-img-wrapper{
-      position: relative;
-      width: 100%;
-    }
-
-    .display-picture-img-wrapper > .icon-wrapper{
-      position: absolute;
-      right: 10px;
-      bottom: 10px;
-      width: 40px;
-      height: 40px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: rgb(244, 244, 244);
-      border-radius: 50%;
-    }
-
-    .display-picture-img-wrapper > .icon-wrapper > svg{
-      color: #000;
-      width: 20px;
-      height: 20px;
-    }
-    
-    .display-picture-img-wrapper > .icon-wrapper > svg:hover{
-      color: #616161;
-    }
-
-    .display-picture-img-wrapper > img{
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-    }
-
-    .display-picture-wrapper > label input[type='file']{
-      cursor: pointer;
-      display: none;
-    }
+  display: flex;
   
-    fieldset {
-      border: 1px solid rgb(193, 207, 215);
-      padding: 5px 10px;
-      border-radius: 5px;
-      margin: 15px 0;
-    }
-    
-    fieldset > legend{
-      float: none;
-      width: auto;
-      font-size: 1.2rem;
-      color: rgb(29, 130, 29);
-    }
-  
-    fieldset > input{
-      border: none;
-      outline: none;
-      font-size: 1rem;
-      width: 100%;
-      display: block;
-      height: 30px;
-    }
-
-    input[type='submit']{
-      border: none;
-      outline: none;
-      color: white;
-      opacity: 0.7;
-      font-size: 1rem;
-      font-weight: 600;
-      background-color:rgb(0, 167, 0) !important; 
-    }
-  }
-
   .container-row{
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
+    position: relative;
+    display: flex;
     width: 90%;
-    margin: 0 auto;
-    grid-gap: 20px;
+    margin: 20px auto 20px auto;
+    // background-color: red;
   }
 
-  .left-container{
-    margin: 0 0 auto 0;
-    grid-column: span 3;
+  .sidebar{
+    width: 25%;
+    position: fixed;
     display: flex;
     flex-direction: column;
     border-radius: 5px;
     box-shadow: 1px 1px 9px 1px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    padding: 20px 0 0 0;
-    width: 100%;
-    // background-color: red;
-
-
+    height: calc(100vh - 10vh - 20vh);
+    // background-color: yellow;
+  
     .profile-container{
       border-bottom: 4px solid rgb(187, 207, 207);
     }
@@ -193,22 +95,31 @@
     }
   }
 
-  .right-container{
-    grid-column: span 9;
-    display: flex;
-    flex-direction: column;
+  .content{
+    position: fixed;
+    right: 5%;
+    left: 30%;
+    flex: 1 ;
+    overflow-y: scroll;
+    height: calc(100vh - 30vh);
+    padding: 0 10px 10px 10px;
+    -webkit-overflow-scrolling: touch; // For better mobile scrolling
+    // background-color: blue;
     
     header{
       display: flex;
       align-items: center;
-      padding: 15px;
+      padding: 10px;
       justify-content: space-between;
       box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2), 0px 0px 0px 1px rgba(0, 0, 0, 0.19);
+      // background-color: red;
+      padding: 10px;
+      border-top: 1px solid #d0c1c1;
     }
 
     .header-text-wrapper > h2{
       margin: 0;
-      font-size: 1.7rem;
+      font-size: 1.5rem;
       font-weight: bold;
     }
 
@@ -227,7 +138,7 @@
       opacity: 0.4;
       color: white;
       border-radius: 5px;
-      cursor: pointer;
+      // cursor: pointer;
       background-color:rgb(0, 167, 0) !important; 
     }
 
@@ -344,7 +255,100 @@
     }
   }
 
+  #settings{
 
+    .settings-container{
+      width: 400px;
+      display: block;
+      margin: 20px auto;
+    }
+
+    .display-picture-wrapper{
+      width: 150px;
+      height: 150px;
+      margin: 0 auto;
+    }
+
+    .display-picture-wrapper > label{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      margin: 0 auto;
+      cursor: pointer;
+    }
+
+    .display-picture-img-wrapper{
+      position: relative;
+      width: 100%;
+    }
+
+    .display-picture-img-wrapper > .icon-wrapper{
+      position: absolute;
+      right: 10px;
+      bottom: 10px;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: rgb(244, 244, 244);
+      border-radius: 50%;
+    }
+
+    .display-picture-img-wrapper > .icon-wrapper > svg{
+      color: #000;
+      width: 20px;
+      height: 20px;
+    }
+    
+    .display-picture-img-wrapper > .icon-wrapper > svg:hover{
+      color: #616161;
+    }
+
+    .display-picture-img-wrapper > img{
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+    }
+
+    .display-picture-wrapper > label input[type='file']{
+      cursor: pointer;
+      display: none;
+    }
+  
+    fieldset {
+      border: 1px solid rgb(193, 207, 215);
+      padding: 5px 10px;
+      border-radius: 5px;
+      margin: 15px 0;
+    }
+    
+    fieldset > legend{
+      float: none;
+      width: auto;
+      font-size: 1.2rem;
+      color: rgb(29, 130, 29);
+    }
+  
+    fieldset > input{
+      border: none;
+      outline: none;
+      font-size: 1rem;
+      width: 100%;
+      display: block;
+      height: 30px;
+    }
+
+    input[type='submit']{
+      border: none;
+      outline: none;
+      color: white;
+      opacity: 0.7;
+      font-size: 1rem;
+      font-weight: 600;
+      background-color:rgb(0, 167, 0) !important; 
+    }
+  }
 
   @media screen and (max-width: 992px){
     .profile-picture{
